# Koesu

./: .env.example  .gitignore  Dockerfile  LICENSE  application.yml.example  docker-compose.yml  koesu  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  tsconfig.json
gateway/: go.mod
koesu-gateway/: go.mod  go.sum  main.go
koesu-gateway/internal/dashboard/: dashboard.go  logwatcher.go  server.go
koesu-gateway/internal/proxy/: proxy.go
koesu-gateway/internal/watchdog/: watchdog.go
koesu-http/: Cargo.toml
koesu-http/src/: main.rs
koesu-web/: README.md  package.json
koesu-web/api/: package.json
node_modules_bak/: .modules.yaml  .pnpm-workspace-state-v1.json  discord.js  lavalink-client  prisma  ws  zlib-sync
node_modules_bak/.bin/: pino  pino-pretty  prisma  tsc  tsserver  tsx
node_modules_bak/.cache/jiti/: koesu-prisma.config.042d998c.mjs
node_modules_bak/@fastify/: oauth2
node_modules_bak/@inquirer/: prompts
node_modules_bak/@libsql/: client
node_modules_bak/@prisma/: adapter-libsql  client
prisma/: schema.prisma
sources/: pyproject.toml
sources/src/koesu_sources/: logger.py  main.py  resolver.py
sources/src/koesu_sources/dj/: __init__.py  presenter.py  search.py  tts.py
sources/src/koesu_sources/sources/: base.py  local.py  soundcloud.py  youtube.py
src/: client.ts  index.ts
src/commands/config/: logs.ts  panel.ts  setup.ts
src/commands/files/: set-files.ts  test.ts
src/commands/lastfm/: connect.ts  disconnect.ts  verify.ts
src/commands/music/: pause.ts  play.ts  queue.ts  skip.ts  stop.ts
src/commands/playlist/: add.ts  create.ts  play.ts
src/commands/rpc/: enable.ts
src/commands/tts/: config.ts  speak.ts
src/commands/voice/: config.ts  create.ts
src/events/: interactionCreate.ts  ready.ts
src/handlers/: commands.ts  events.ts  lavalink.ts
src/lastfm/: index.ts
src/panel/: index.ts
src/rpc/: gateway.ts  manager.ts  server.ts
src/setup/: database.ts  docker.ts  lavalink.ts  redis.ts  wizard.ts
src/utils/: cache.ts  detector.ts  embed.ts  log-transport.ts  logger.ts  permissions.ts
src/ytdlp/: cache.ts  client.ts  local.ts  server.ts  youtube.ts
