[package]
name = "koesu-http"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lru = "0.12"
dashmap = "5"
walkdir = "2"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
hyper = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
http-range-header = "0.4"
urlencoding = "2.1.3"
